# xgreety

./: .gitignore  CMakeLists.txt  CODING_STYLE.md  CONTRIBUTING.md  README.md  run.sh
include/: config_manager.hpp  error_message.hpp  greeter.hpp  login_box.hpp  status_bar.hpp  window.hpp
src/: config_manager.cpp  error_message.cpp  greeter.cpp  login_box.cpp  main.cpp  status_bar.cpp  window.cpp
